# 2d-fluid-simulator

./: .gitignore  Pipfile  README.md  advection.py  boundary_condition.py  differentiation.py  fluid_sim.py  fluid_simulator.py  main.py  pressure_updater.py  pyproject.toml  requirements.txt  solver.py  updater.py  visualization.py  visualize.py  vorticity_confinement.py
fs/: advection.py  boundary_condition.py  double_buffer.py  fluid_simulator.py  pressure_updater.py  solver.py  visualization.py  vorticity_confinement.py
